--- a/style.css
+++ b/style.css
@@ -164,7 +164,7 @@ section .title::after{
 /* home section styling */
 .home{
     display: flex;
-    background: url("images/banner0.png") no-repeat center;
+    background: url("images/bann0.png") no-repeat center;
     height: 100vh;
     color: #fff;
     min-height: 500px;
